--- a/index.html
+++ b/index.html
@@ -3,61 +3,105 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Car Manager</title>
+  <title>AlkTaller</title>
+  <link rel="icon" href="images/icono.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<h1>🚗 Car Manager</h1>
+<div id="login-screen" class="hidden">
+  <div class="login-container">
+    <img src="images/logo.png" alt="AlkTaller Logo" class="login-logo">
+    <h2>Bienvenido a AlkTaller</h2>
+    <p>Para gestionar tus datos de forma segura sin servidores, necesitamos un Token de GitHub.</p>
+    
+    <div class="input-group-vertical">
+      <a href="https://github.com/settings/tokens/new?scopes=repo&description=AlkTaller%20Web%20App" target="_blank" class="btn-secondary btn-full">
+        🔑 Generar Token Automáticamente
+      </a>
+      <p class="tiny-text">(Te abrirá GitHub. Baja al final, pulsa "Generate token" y pégalo abajo)</p>
+    </div>
 
-<select id="vehicleSelect"></select>
-<button onclick="addVehicle()">➕ Añadir coche</button>
-<button onclick="logout()">🚪 Salir</button>
-<button onclick="saveData(data)">💾 Guardar en GitHub</button>
+    <div class="input-group">
+      <input type="password" id="githubTokenInput" placeholder="Pega aquí tu token (ghp_...)">
+      <button onclick="handleLogin()" class="btn-primary">Entrar</button>
+    </div>
+  </div>
+</div>
 
-<section>
-  <h2>📊 Estadísticas</h2>
-  <div id="stats"></div>
-</section>
+<div id="app-container" class="hidden">
+  <header>
+    <div class="logo-area">
+      <img src="images/logo.png" alt="AlkTaller" class="app-logo">
+      <h1>AlkTaller</h1>
+    </div>
+    <div class="user-area">
+      <button onclick="logout()" class="btn-secondary">🚪 Salir</button>
+    </div>
+  </header>
 
-<section>
-  <h2>⛽ Nuevo repostaje</h2>
-  <input id="fuelDate" type="date">
-  <input id="fuelOdo" type="number" placeholder="Kilómetros">
-  <input id="fuelLiters" type="number" placeholder="Litros">
-  <input id="fuelCost" type="number" placeholder="Coste total (€)">
-  <button onclick="addFuel()">Guardar repostaje</button>
-</section>
+  <main>
+    <div class="dashboard-controls">
+      <select id="vehicleSelect"></select>
+      <div class="action-buttons">
+        <button onclick="addVehicle()" class="btn-primary">➕ Añadir coche</button>
+        <button onclick="saveData(data)" class="btn-success">💾 Guardar cambios</button>
+      </div>
+    </div>
 
-<section>
-  <h2>🔧 Nuevo mantenimiento</h2>
-  <input id="maintDate" type="date">
-  <input id="maintType" placeholder="Tipo (aceite, frenos...)">
-  <input id="maintOdo" type="number" placeholder="Kilómetros">
-  <input id="maintCost" type="number" placeholder="Coste (€)">
-  <button onclick="addMaintenance()">Guardar mantenimiento</button>
-</section>
+    <section class="card">
+      <h2>📊 Estadísticas</h2>
+      <div id="stats"></div>
+    </section>
 
-<section>
-  <h2>⏰ Recordatorios</h2>
-  <table id="reminderTable">
-    <thead>
-      <tr>
-        <th>Título</th>
-        <th>Frecuencia (km)</th>
-        <th>Frecuencia (días)</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-  <button onclick="addReminder()">➕ Añadir recordatorio</button>
-</section>
+    <div class="forms-grid">
+      <section class="card">
+        <h2>⛽ Nuevo repostaje</h2>
+        <div class="form-group">
+          <input id="fuelDate" type="date">
+          <input id="fuelOdo" type="number" placeholder="Kilómetros">
+          <input id="fuelLiters" type="number" placeholder="Litros">
+          <input id="fuelCost" type="number" placeholder="Coste total (€)">
+          <button onclick="addFuel()" class="btn-primary">Guardar repostaje</button>
+        </div>
+      </section>
 
-<section>
-  <h2>📋 Timeline</h2>
-  <ul id="timeline"></ul>
-</section>
+      <section class="card">
+        <h2>🔧 Nuevo mantenimiento</h2>
+        <div class="form-group">
+          <input id="maintDate" type="date">
+          <input id="maintType" placeholder="Tipo (aceite, frenos...)">
+          <input id="maintOdo" type="number" placeholder="Kilómetros">
+          <input id="maintCost" type="number" placeholder="Coste (€)">
+          <button onclick="addMaintenance()" class="btn-primary">Guardar mantenimiento</button>
+        </div>
+      </section>
+    </div>
+
+    <section class="card">
+      <h2>⏰ Recordatorios</h2>
+      <div class="table-responsive">
+        <table id="reminderTable">
+          <thead>
+            <tr>
+              <th>Título</th>
+              <th>Frecuencia (km)</th>
+              <th>Frecuencia (días)</th>
+              <th>Acciones</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+      <button onclick="addReminder()" class="btn-secondary mt-2">➕ Añadir recordatorio</button>
+    </section>
+
+    <section class="card">
+      <h2>📋 Historial</h2>
+      <ul id="timeline"></ul>
+    </section>
+  </main>
+</div>
 
 <script src="js/storage.js"></script>
 <script src="js/app.js"></script>
