update with repo private for data

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     </div>
 
     <div class="input-group-vertical" style="text-align: left; margin-bottom: 1rem;">
-       <label for="repoUser" style="font-size: 0.85rem; font-weight: bold;">Usuario / Organización</label>
+       <label for="repoUser" style="font-size: 0.85rem; font-weight: bold;">Usuario GitHub</label>
        <input type="text" id="repoUser" placeholder="Ej: alktaller">
        
-       <label for="repoName" style="font-size: 0.85rem; font-weight: bold; margin-top: 0.5rem;">Repositorio</label>
-       <input type="text" id="repoName" placeholder="Ej: web-alktaller">
+       <label for="repoName" style="font-size: 0.85rem; font-weight: bold; margin-top: 0.5rem;">Nombre del Repositorio de Datos</label>
+       <input type="text" id="repoName" placeholder="Ej: mis-datos-coche">
+       <p class="tiny-text" style="color: #4a5568;">Recomendado: Un repositorio <b>Privado</b> para mayor privacidad.</p>
     </div>
 
     <div class="input-group">
