add categories list

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <h2>🔧 Nuevo mantenimiento</h2>
         <div class="form-group">
           <input id="maintDate" type="date">
-          <input id="maintType" placeholder="Tipo (aceite, frenos...)">
+          <input id="maintType" placeholder="Tipo (aceite, frenos...)" list="maintenance-categories">
           <input id="maintOdo" type="number" placeholder="Kilómetros">
           <input id="maintCost" type="number" placeholder="Coste (€)">
           <button onclick="addMaintenance()" class="btn-primary">Guardar mantenimiento</button>
