--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>AlkTaller</title>
   <link rel="icon" href="images/icono.png">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css?v=2">
+  <style>
+    /* Critical Internal CSS to prevent FOUC / Cache issues */
+    .tab-content { display: none; }
+    .tab-content.active { display: block; animation: fadeIn 0.3s; }
+    @keyframes fadeIn { from{opacity:0} to{opacity:1} }
+    .tab-menu { display: flex; gap: 10px; padding: 10px 0; border-bottom: 2px solid #E2E8F0; margin-bottom: 20px; overflow-x: auto; }
+    .tab-btn { background:none; border:none; padding:10px 20px; font-weight:600; cursor:pointer; color:#718096; }
+    .tab-btn.active { color:#0056D2; border-bottom: 2px solid #0056D2; }
+  </style>
 </head>
 <body>
 
