--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     @keyframes fadeIn { from{opacity:0} to{opacity:1} }
     .tab-menu { display: flex; gap: 10px; padding: 10px 0; border-bottom: 2px solid #E2E8F0; margin-bottom: 20px; overflow-x: auto; }
     .tab-btn { background:none; border:none; padding:10px 20px; font-weight:600; cursor:pointer; color:#718096; }
-    .tab-btn.active { color:#0056D2; border-bottom: 2px solid #0056D2; }
+    .tab-btn.active { color:#FF8C00; border-bottom: 2px solid #FF8C00; }
   </style>
 </head>
 <body>
