--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
       <h1>AlkTaller</h1>
     </div>
     <div class="user-area">
-      <button onclick="logout()" class="btn-secondary">🚪 Salir</button>
+      <button onclick="logout()" class="btn-secondary">
+          <svg class="icon" viewBox="0 0 24 24"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
+          Salir
+      </button>
     </div>
   </header>
 
@@ -46,28 +49,52 @@
     <div class="dashboard-controls">
       <select id="vehicleSelect"></select>
       <div class="action-buttons">
-        <button onclick="addVehicle()" class="btn-primary">➕ Añadir coche</button>
-        <button onclick="saveData(data)" class="btn-success">💾 Guardar cambios</button>
+        <button onclick="addVehicle()" class="btn-primary">
+            <svg class="icon" viewBox="0 0 24 24" style="stroke:white"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
+            Añadir coche
+        </button>
+        <button onclick="saveData(data)" class="btn-success">
+            <svg class="icon" viewBox="0 0 24 24" style="stroke:white"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v13a2 2 0 0 1-2 2z"></path><polyline points="17 21 17 13 7 13 7 21"></polyline><polyline points="7 3 7 8 15 8"></polyline></svg>
+            Guardar cambios
+        </button>
       </div>
     </div>
 
     <!-- Navigation Menu -->
     <nav class="tab-menu">
-      <button class="tab-btn active" onclick="openTab('dashboard')">📊 Resumen</button>
-      <button class="tab-btn" onclick="openTab('actions')">📝 Operaciones</button>
-      <button class="tab-btn" onclick="openTab('reminders')">⏰ Recordatorios</button>
-      <button class="tab-btn" onclick="openTab('history')">📋 Historial</button>
+      <button class="tab-btn active" onclick="openTab('dashboard')">
+        <svg class="icon" viewBox="0 0 24 24"><rect x="3" y="3" width="7" height="7"></rect><rect x="14" y="3" width="7" height="7"></rect><rect x="14" y="14" width="7" height="7"></rect><rect x="3" y="14" width="7" height="7"></rect></svg>
+        Resumen
+      </button>
+      <button class="tab-btn" onclick="openTab('actions')">
+        <svg class="icon" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="16"></line><line x1="8" y1="12" x2="16" y2="12"></line></svg>
+        Operaciones
+      </button>
+      <button class="tab-btn" onclick="openTab('reminders')">
+        <svg class="icon" viewBox="0 0 24 24"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
+        Recordatorios
+      </button>
+      <button class="tab-btn" onclick="openTab('history')">
+        <svg class="icon" viewBox="0 0 24 24"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
+        Historial
+      </button>
     </nav>
 
     <!-- Tab 1: Dashboard (Stats + Vehicle Info) -->
     <div id="dashboard" class="tab-content active">
         <section class="card">
-          <h2>📊 Estadísticas</h2>
+          <h2>
+            <svg class="icon" viewBox="0 0 24 24"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg> 
+            Estadísticas
+          </h2>
           <div id="stats"></div>
         </section>
 
         <section class="card">
-          <h2>🚗 Información del Vehículo</h2>
+          <h2>
+            <svg class="icon" viewBox="0 0 24 24"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg> 
+            Información del Vehículo
+          </h2>
           <div class="form-group" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem;">
             <div>
               <label>Matrícula</label>
@@ -104,24 +131,36 @@
     <div id="actions" class="tab-content">
         <div class="forms-grid">
             <section class="card">
-              <h2>⛽ Nuevo repostaje</h2>
+              <h2>
+                <svg class="icon" viewBox="0 0 24 24"><path d="M3 21.01h.01"></path><path d="M9 21.01h.01"></path><path d="M15 21.01h.01"></path><path d="M21 21.01h.01"></path><path d="M4 21a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v15a2 2 0 0 1-2 2"></path><path d="M3 11h18"></path><path d="M15 11v10"></path></svg>
+                Nuevo repostaje
+              </h2>
               <div class="form-group">
                 <input id="fuelDate" type="date">
                 <input id="fuelOdo" type="number" placeholder="Kilómetros">
                 <input id="fuelLiters" type="number" placeholder="Litros">
                 <input id="fuelCost" type="number" placeholder="Coste total (€)">
-                <button onclick="addFuel()" class="btn-primary">Guardar repostaje</button>
+                <button onclick="addFuel()" class="btn-primary">
+                    <svg class="icon" viewBox="0 0 24 24" style="stroke:white"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v13a2 2 0 0 1-2 2z"></path><polyline points="17 21 17 13 7 13 7 21"></polyline><polyline points="7 3 7 8 15 8"></polyline></svg>
+                    Guardar repostaje
+                </button>
               </div>
             </section>
 
             <section class="card">
-              <h2>🔧 Nuevo mantenimiento</h2>
+              <h2>
+                <svg class="icon" viewBox="0 0 24 24"><path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"></path></svg>
+                Nuevo mantenimiento
+              </h2>
               <div class="form-group">
                 <input id="maintDate" type="date">
                 <input id="maintType" placeholder="Tipo (aceite, frenos...)" list="maintenance-categories">
                 <input id="maintOdo" type="number" placeholder="Kilómetros">
                 <input id="maintCost" type="number" placeholder="Coste (€)">
-                <button onclick="addMaintenance()" class="btn-primary">Guardar mantenimiento</button>
+                <button onclick="addMaintenance()" class="btn-primary">
+                    <svg class="icon" viewBox="0 0 24 24" style="stroke:white"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v13a2 2 0 0 1-2 2z"></path><polyline points="17 21 17 13 7 13 7 21"></polyline><polyline points="7 3 7 8 15 8"></polyline></svg>
+                    Guardar mantenimiento
+                </button>
               </div>
             </section>
         </div>
@@ -130,7 +169,10 @@
     <!-- Tab 3: Reminders -->
     <div id="reminders" class="tab-content">
         <section class="card">
-          <h2>⏰ Recordatorios</h2>
+          <h2>
+            <svg class="icon" viewBox="0 0 24 24"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
+            Recordatorios
+          </h2>
           <div class="table-responsive">
             <table id="reminderTable">
               <thead>
@@ -144,14 +186,20 @@
               <tbody></tbody>
             </table>
           </div>
-          <button onclick="addReminder()" class="btn-secondary mt-2">➕ Añadir recordatorio</button>
+          <button onclick="addReminder()" class="btn-secondary mt-2">
+            <svg class="icon" viewBox="0 0 24 24"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
+            Añadir recordatorio
+          </button>
         </section>
     </div>
 
     <!-- Tab 4: History -->
     <div id="history" class="tab-content">
         <section class="card">
-          <h2>📋 Historial</h2>
+          <h2>
+            <svg class="icon" viewBox="0 0 24 24"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
+            Historial
+          </h2>
           <ul id="timeline"></ul>
         </section>
     </div>
