--- a/index.html
+++ b/index.html
@@ -220,22 +220,14 @@
             <svg class="icon" viewBox="0 0 24 24"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
             Recordatorios
           </h2>
-          <div class="table-responsive">
-            <table id="reminderTable">
-              <thead>
-                <tr>
-                  <th>Título</th>
-                  <th>Frecuencia (km)</th>
-                  <th>Tiempo</th>
-                  <th>Acciones</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
+          
+          <div id="remindersList" style="display:flex; flex-direction:column; gap:15px;">
+             <!-- Reminders rendered here as cards -->
           </div>
-          <button onclick="addReminder()" class="btn-secondary mt-2">
-            <svg class="icon" viewBox="0 0 24 24"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
-            Añadir recordatorio
+
+          <button onclick="addReminder()" class="btn-primary" style="margin-top:15px; width:100%">
+            <svg class="icon" viewBox="0 0 24 24" style="stroke:white"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
+            Nuevo Recordatorio
           </button>
         </section>
     </div>
@@ -256,8 +248,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.31/jspdf.plugin.autotable.min.js"></script>
 
-<script src="js/storage.js?v=8"></script>
-<script src="js/app.js?v=8"></script>
+<script src="js/storage.js?v=9"></script>
+<script src="js/app.js?v=9"></script>
 
 </body>
 </html>
