--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
       <button onclick="toggleConfig()" class="btn-secondary">
           <svg class="icon" viewBox="0 0 24 24"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
       </button>
-      <button onclick="logout()" class="btn-secondary">
+      <button onclick="logout()" class="btn-secondary" title="Salir">
           <svg class="icon" viewBox="0 0 24 24"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
-          <span class="btn-text">Salir</span>
       </button>
     </div>
   </header>
@@ -116,6 +115,21 @@
             Información del Vehículo
           </h2>
           <div class="form-group" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem;">
+            <!-- Vehicle Photo Block -->
+            <div style="grid-column: 1 / -1; display:flex; flex-direction:column; align-items:center; margin-bottom:1rem;">
+                <div style="position:relative; width:100%; max-width:400px; height:200px; background:#f1f5f9; border-radius:8px; overflow:hidden; display:flex; align-items:center; justify-content:center; border:1px solid #e2e8f0;">
+                    <img id="vehiclePhotoImg" src="" style="width:100%; height:100%; object-fit:cover; display:none;">
+                    <svg id="vehiclePhotoPlaceholder" viewBox="0 0 24 24" style="width:64px; height:64px; color:#cbd5e1; fill:none; stroke:currentColor; stroke-width:1;"><circle cx="12" cy="12" r="10"></circle><path d="M8 14s1.5 2 4 2 4-2 4-2"></path><line x1="9" y1="9" x2="9.01" y2="9"></line><line x1="15" y1="9" x2="15.01" y2="9"></line></svg>
+                    
+                    <label for="vehiclePhotoInput" style="position:absolute; bottom:10px; right:10px; background:rgba(0,0,0,0.6); color:white; padding:5px 10px; border-radius:20px; font-size:0.8rem; cursor:pointer; display:flex; align-items:center; gap:5px; backdrop-filter:blur(2px);">
+                        <svg class="icon" viewBox="0 0 24 24" style="width:16px; height:16px;"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
+                        Cambiar Foto
+                    </label>
+                    <input id="vehiclePhotoInput" type="file" accept="image/*" onchange="uploadVehiclePhoto(this)" style="display:none;">
+                </div>
+                <span id="vehiclePhotoStatus" style="font-size:0.8rem; color:#64748b; margin-top:5px;"></span>
+            </div>
+
             <div>
               <label>Matrícula</label>
               <input id="infoPlate" type="text" placeholder="0000 XXX" onchange="updateVehicleInfo('plate', this.value)">
